[gd_scene load_steps=4 format=3 uid="uid://cm46rmlq843t4"]

[ext_resource type="Script" uid="uid://cew5qxy5wevj4" path="res://Scripts/drink.gd" id="1_23ypx"]
[ext_resource type="Texture2D" uid="uid://r63a4f6fp75t" path="res://Sprites/Drink.png" id="2_yfn7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4y3xm"]
size = Vector2(12, 10)

[node name="Area2D" type="Area2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_23ypx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_yfn7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4y3xm")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
